[metadata]
name = mde-python
version = 0.2.3
author = Linus
author_email = element.oxygen@gmail.com
description = MS Defender for Endpoint for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/WildDogOne/mde-python
project_urls =
    Bug Tracker = https://github.com/WildDogOne/mde-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src